Implementation of getting cars for My Car page from backend Implementation of delete function of cars